# p2p-chat

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/crypto/: exchange.rs  identity.rs  keystore.rs  mod.rs
src/discovery/: mdns.rs  mod.rs
src/network/: config.rs  mod.rs  node.rs
src/protocol/: handshake.rs  message.rs  mod.rs
