[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"
description = "Decentralized, end-to-end encrypted peer-to-peer chat application"
authors = ["Antigravity <antigravity@example.com>"]

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# QUIC Transport
quinn = { version = "0.10.2", features = ["rustls", "tls-rustls"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4.3"
rcgen = "0.13"
mdns-sd = "0.18.0"
serde_with = "3.16.1"

